# dataframe_convert

./: Cargo.toml  README.md  flake.nix
data/: sample.csv
scripts/: gen-readme.sh  replace_block.py
src/: concat.rs  datatype_ser.rs  formats.rs  infer.rs  lib.rs  main.rs  metadata.rs  read.rs  read_excel.rs  write.rs  write_excel.rs
tests/: cli.rs  roundtrip.rs
