[package]
name = "dataframe_convert"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
base64 = "0.22.1"
calamine = "0.26"
clap = { version = "4", features = ["derive"] }
foldhash = "0.2.0"
polars = {version = "0.53", features = ["performant", "lazy", "csv", "parquet", "json", "ipc", "fmt", "strings", "regex", "dtype-full", "temporal", "dtype-datetime", "dtype-date", "dtype-duration", "dtype-time", "diagonal_concat"] }
polars-core = "0.53"
polars_excel_writer = "0.25"
regex = "1"
rusqlite = { version = "0.40", features = ["bundled"] }
clap-markdown = "0.1.5"


[dev-dependencies]
rstest = "0.26"
tempfile = "3"
